use new jdk gramma